# rotten-chirp

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
assets/: display-module-pinout.avif  esp-module-pinout.avif
src/: main.rs
