[package]
name = "psu-sniffer"
version = "0.1.0"
authors = ["Jan Krejčí <krejci.cze@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32c3", "defmt"] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-println = { version = "0.12.0", default-features = false, features = [
    "esp32c3",
    "uart",
    "defmt-espflash",
    "critical-section",
] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32c3"] }
embassy-executor = { version = "0.6.0", features = ["nightly"] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
defmt = "0.3.8"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
